[project]
name = "brochure-with-gradio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "gradio>=6.14.0",
    "ipython>=9.13.0",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
